k8s/manifests/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  labels:
    app: backend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: docker.io/library/a1-node
          command: ["npm"]
          args: ["run", "dev"]
          imagePullPolicy: Never
          ports:
            - name: http
              containerPort: 8080
          resources:
            limits:
              cpu: 40m
              memory: 100Mi
